# template-manager

./: .gitignore  ANNOUNCE  Makefile  README.ftp  README.md
branches/CvR/tmclean/: typedef.t
branches/CvR/tmdemo/: calc.ct  calcopt.c
cpp/: Makefile.in
cpp/libtmcpp/: Makefile.in  fprushrt.c  goodout  lncrstr.c
cpp/tmcpp/: makefile.tc
demo/: Makefile.in  calcopt.c
demo/trunk/: Makefile.in
kernel/: INSTALL  Makefile.in  autoconfall  configure.in
kernel/debian/: copyright  docs  postrm.ex  prerm.ex  rules
kernel/libtmc/: .gitignore  Makefile.in  cmpdbl.c  cmpstrtx.c  cmptxt.c  fatal.c  fnprop.lnt  fprint.c  fprlong.c  fpruchar.c  fprushrt.c  fprwrd.c  fscdbl.c  fscschar.c  fscspace.c  fscsshrt.c  fscstr.c  fscsym.c  fscushrt.c  fscwrd.c  insblock.c  instext.c  lncrstr.c  lnfscwrd.c  lnnewstr.c  lnsltxt.c  lrduptxt.c  newstr.c  prdbl.c  print.c  propt.c  prsshrt.c  prstr.c  prsym.c  prtext.c  pruchar.c  pruint.c  prulong.c  prwrd.c  putctext.c  (+7 more)
kernel/manual/: Makefile  arith.xt  tm.tex
kernel/tm/: .gitignore  Makefile.in  checkds.c  co-gcc.lnt  config.hin  configure.in  dsparser.c  error.c  flag.c  flag.h  fn.c  fnprop.lnt  goodout  misc.c  misc.h  refex.c  tmcode.c  tmcode.h  tmtrans.c
kernel/tmc/: .gitignore  Makefile.in  aluokerr  calu.ct  cllu.ct  cltest.ds  configure.in  macros.t  splint.flags  std.lnt  tmc.ct  tmc.ht  tmcokerr
kernel/trunk/: CHANGES  INSTALL  Makefile.in  README  SHORTANNOUNCE
miranda/: Makefile.in
miranda/tmmira/: configure.in  goodout
pascal/: Makefile.in
pascal/tmpas/: Makefile.in  pasvar.pt  plot.ds
pascal/trunk/: README
tags/initial/: Makefile
tags/initial/tmdemo/: Makefile.in  README  calcconf.t  configure  configure.in  okopt.clc  oktest.clc  test.calc
tags/initial/tmkernel/libtmc/: configure.in  makefile.tc  objlist  symbol.c  tmc.h
tags/release 2.1.0/: ANNOUNCE
tags/release-2-1-0/: .cvsignore  Makefile  README.ftp  SHORTANNOUNCE
tags/release-2-1-0/tmkernel/tm/: configure.in  fn.h  goodout  lex.c  makefile.tc  testin  tmpath.h  tmstring.c  var.h
tags/release_2_0_8/: .cvsignore  Makefile
tags/release_2_0_8/tmkernel/tm/: .cvsignore  README  checkds.c  configure.in  flag.h  global.c  global.h  tm.ds  tmdefs.h
tmcpp/: Makefile.in
tmcpp/libtmcpp/: Makefile.in  README  apptext.c  cmptxt.c  config.h  delbtext.c  fprint.c  fprstr.c  fprtext.c  fprwrd.c  fscbool.c  fsccbrac.c  fscescc.c  fscschar.c  fscsshrt.c  gooderr  insblock.c  instext.c  libtmcpp.mcp  lnfscstr.c  lnfsctxt.c  lnreastr.c  makefile.tc  newstr.c  objlist  prdbl.c  print.c  prlong.c  propt.c  prsshrt.c  prstr.c  prsym.c  prtext.c  prulong.c  reastr.c  repltext.c  setrmtxt.c  sltxt.c  symbol.c  t2s.c  (+5 more)
tmcpp/tmcpp/: Makefile  Makefile.in  cltest.ds  configure.in  cppwalk.t  makefile.tc  need.t  okout  spec.t  tmccode.ht  tmcpp.ct  tmcpp.ht  tpltest.c  walkin  walktest.ct
tmdemo/: .cvsignore  Makefile.in  calclex.l  configure  subst.ct
tmkernel/: .cvsignore  CHANGES  LICENCE  Makefile.in  README  autoconfall
tmkernel/libtmc/: .cvsignore  Makefile.in  config.h  config.hin  config.htc  configure.in  escstr.c  filelist  fneedc.c  fprschar.c  fprsshrt.c  fprsym.c  fprtext.c  fpruchar.c  fpruint.c  fprulong.c  fscbool.c  fsccbrac.c  fsccons.c  fscdbl.c  fscescc.c  fscflt.c  fscint.c  fscschar.c  fscspace.c  fscsshrt.c  fscuchar.c  fscuint.c  fscushrt.c  gooderr  goodout  insblock.c  lnfretxt.c  lnfscstr.c  lnnewstr.c  lnnewtxt.c  lnreastr.c  lns2t.c  lnsltxt.c  lnt2s.c  (+27 more)
tmkernel/tm/: Makefile.in  checkds.c  checkds.h  co-gnu.lnt  config.hin  configure.in  dsparser.c  dsparser.h  error.c  expand.c  expand.h  flag.h  fn.c  fn.h  global.c  global.h  gooderr  goodout  lex.c  lex.h  misc.c  misc.h  refex.c  refex.h  srchfile.c  srchfile.h  test.ds  testin  testsub  tm.c  tm.ds  tmcode.c  tmcode.ct  tmcode.h  tmdefs.h  tmexpr.c  tmpath.c  tmspec.t  tmstring.c  tmstring.h  (+4 more)
tmkernel/tmc/: Makefile.in  aldcode.ht  aldokerr  aldspec.t  aluspec.t  cald.ct  cald.ht  calu.ct  calu.ht  cllu.ct  cllu.ht  cltest.ds  configure.in  llucode.ct  lluid.t  lluokerr  lluokout  lluspec.t  macros.t  need.t  test.ds  tmc.ct  tmc.ht  tmcanalyze.t  tmccode.ct  tmcokerr  tmcspec.t  tmcwalk.t  tmcwalktest.ct  xxtest.c
tmkernel/tmusrdoc/: democ.tex  main.tex  title.ds
tmkrndoc/: Makefile  append.xt  calc.ds  calc.h  calc.tex  cmp.out  defs.tex  demo.ct  ds.tex  dsgram.tex  fnds.out  fnds.xt  for.xt  foreach.xt  intro.tex  main.ps  main.tex  math.out  pdstitle.sty  preface.tex  regex.out  regex.xt  test.calc  titlepage.tex  tm.tex  tmc.tex  tree.ds
tmmira/: Makefile.in
tmmira/tmmira/: test.ds
tmpas/: .cvsignore  Makefile.in  README
tmpas/pasdoc/: Makefile
trunk/: ANNOUNCE  Makefile  SHORTANNOUNCE  autoconfall
trunk/tmclean/: Makefile
trunk/tmcpp/: .cvsignore  Makefile.in  configure.in
trunk/tmcpp/libtmcpp/: .cvsignore  Makefile.in  README  apptext.c  cmpdbl.c  cmpstrtx.c  config.h  config.hin  configure.in  cpyblock.c  errmsg.c  escstr.c  fatal.c  fneedc.c  fprsym.c  fpruint.c  fprwrd.c  fscbool.c  fsccons.c  fscdbl.c  fscint.c  fsclong.c  fscobrac.c  fscstr.c  fsctext.c  fscuchar.c  fscushrt.c  fscwrd.c  gooderr  goodout  insblock.c  instext.c  libtmcpp.mcp  lnfscstr.c  lnfscwrd.c  lnt2s.c  lognew.c  makefile.tc  newstr.c  objlist  (+28 more)
trunk/tmdemo/: Makefile.in  calcconf.t  configure  configure.in  subst.ct
trunk/tmkernel/: .cvsignore  CHANGES  Makefile  Makefile.in  README  configure
trunk/tmkrndoc/: .cvsignore  Makefile  arith.out  calc.c  calc.ds  calc.h  calc.tex  calclex.l  calcparse.y  cmp.xt  defs.tex  demo.ct  demo.ht  demoh.tex  ds.tex  dsgram.tex  flow.tex  fnds.out  for.out  foreach.out  impl.tex  intro.tex  linemacro.xt  macdemo.out  macdemo.t  main.ps  main.tex  math.xt  plot.ds  preface.tex  service.out  service.xt  switch.out  switch.xt  textfn.out  textfn.xt  titlepage.tex  tm.tex  tmc.tex  upgrade.tex  (+1 more)
trunk/tmmira/: .cvsignore
trunk/tmpas/: Makefile.in  autoconfall
(+870 files in other folders)
