dnl Process this file with autoconf to produce a configure script.
AC_INIT(calc.ds)

dnl Set the installation path by default to the path were gcc is found.
AC_PREFIX_PROGRAM(gcc)

dnl Checks for programs.
AC_PROG_CC
if test "$GCC" = "yes"; then
  CFLAGS="-O2  -Wall -W -Wtraditional -Wpointer-arith -Wbad-function-cast -Wcast-align -Wmissing-prototypes -Wmissing-declarations -Wnested-externs -Wstrict-prototypes -ansi -pedantic"
fi
AC_PROG_MAKE_SET
AC_PROG_LN_S
AC_PROG_LEX
AC_PROG_YACC
dnl AC_PROG_INSTALL

dnl Checks for libraries.
dnl Replace `main' with a function in -lmalloc:
AC_CHECK_LIB(malloc, main)

dnl Checks for header files.
dnl AC_CONFIG_HEADER(config.h:config.hin)
dnl AC_HEADER_STDC

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

dnl Checks for library functions.
dnl AC_CHECK_FUNCS(strerror)

AC_OUTPUT(Makefile)
