dnl Process this file with autoconf to produce a configure script.
AC_INIT(tmcpp.h)

dnl Checks for programs.
AC_PROG_CXX
if test "$GXX" = "yes"; then
  CFLAGS="-O2  -Wall -W -Wtraditional -Wpointer-arith -Wcast-align -Wmissing-prototypes -Wstrict-prototypes -ansi -pedantic"
fi
AC_PROG_MAKE_SET
AC_PROG_RANLIB
AC_PROG_INSTALL
AC_PROG_LN_S

dnl Checks for header files.
AC_CONFIG_HEADER(config.h:config.hin)
AC_HEADER_STDC

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

dnl Checks for library functions.
AC_CHECK_FUNCS(strerror memmove)

AC_OUTPUT(Makefile)
