dnl Process this file with autoconf to produce a configure script.
AC_INIT(dsparser.c)

dnl Checks for programs.
AC_PROG_CC
if test "$GCC" = "yes"; then
  CFLAGS="-O6 -ansi -Wall -W -Wconversion -Wcast-qual -Wpointer-arith -Wwrite-strings -Wtraditional -Wpointer-arith -Wbad-function-cast -Wcast-align -Wmissing-prototypes -Wmissing-declarations -Wnested-externs -Wstrict-prototypes -pedantic"
fi
AC_PROG_MAKE_SET
AC_PROG_LN_S
AC_PROG_INSTALL

dnl Checks for libraries.
dnl Replace `main' with a function in -linux:
AC_CHECK_LIB(inux, main)
dnl Replace `main' with a function in -lmalloc:
AC_CHECK_LIB(malloc, main)

dnl Checks for header files.
AC_CONFIG_HEADER(config.h:config.hin)
AC_HEADER_STDC

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

dnl Checks for library functions.
AC_CHECK_FUNCS(strerror)

AC_OUTPUT(Makefile)
